--- a/app/src/main/res/layout/landing2.xml
+++ b/app/src/main/res/layout/landing2.xml
@@ -50,18 +50,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_DeskripsiPetcare" />
 
-    <Button
-        android:layout_width="match_parent"
+    <android.widget.Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
-        android:backgroundTint="@color/white"
-        android:fontFamily="@font/cabin_semibold"
+        android:height="44dp"
+        android:width="288dp"
+        android:background="@drawable/rounded_corner"
+        android:fontFamily="@font/cabin_semibolditalic"
         android:text="@string/next"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textColor="@color/btnTextColor"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
