--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#00804a</color>
     <color name="btnTextColor">#7A7373</color>
+    <color name="textColor">#7A7373</color>
 </resources>
