--- a/app/src/main/res/layout/landing2.xml
+++ b/app/src/main/res/layout/landing2.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_DeskripsiPetcare" />
 
     <android.widget.Button
+        android:id="@+id/btn_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
@@ -59,6 +60,7 @@
         android:background="@drawable/rounded_corner"
         android:fontFamily="@font/cabin_semibolditalic"
         android:text="@string/next"
+        android:textAllCaps="false"
         android:textAlignment="center"
         android:textColor="@color/btnTextColor"
         android:textSize="16sp"
