--- a/app/src/main/res/layout/landing3.xml
+++ b/app/src/main/res/layout/landing3.xml
@@ -75,6 +75,7 @@
         android:src="@drawable/dotted_line" />
 
     <android.widget.Button
+        android:id="@+id/btn_register"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:background="@drawable/rounded_corner"
