--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,52 +13,54 @@
         android:id="@+id/txt_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login"
-        android:textSize="35sp"
+        android:layout_marginTop="4dp"
         android:fontFamily="@font/cabin"
-        android:textStyle="bold"
+        android:text="@string/masuk"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="35sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="78dp"/>
+        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/selamat_datang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/selamat_datang"
-        android:textSize="20sp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/cabin"
-        android:textStyle="bold"
+        android:text="@string/selamat_datang"
         android:textColor="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_login"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_login" />
 
     <TextView
         android:id="@+id/txt_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/username"
+        android:layout_marginTop="100dp"
         android:fontFamily="@font/cabin_semibolditalic"
-        android:textSize="16sp"
+        android:text="@string/username"
         android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/selamat_datang"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintTop_toBottomOf="@+id/selamat_datang" />
+
+    <EditText
         android:id="@+id/input_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/txt_username">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        android:background="@drawable/rounded_corner"
+        android:padding="12dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_username"
+        android:inputType="text"
+        android:textColorHint="@color/textColor"/>
 
     <TextView
         android:id="@+id/txt_password"
@@ -71,25 +73,28 @@
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/input_login"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <com.google.android.material.textfield.TextInputLayout
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <EditText
+        android:id="@+id/input_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/txt_password">
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"/>
-    </com.google.android.material.textfield.TextInputLayout>
+        android:background="@drawable/rounded_corner"
+        android:padding="12dp"
+        android:layout_marginTop="3dp"
+        app:layout_constraintTop_toBottomOf="@id/txt_password"
+        android:inputType="textPassword"
+        android:autofillHints="password"/>
 
     <android.widget.Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:height="44dp"
-        android:width="288dp"
+        android:width="200dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="@font/cabin_semibolditalic"
-        android:text="@string/login"
+        android:text="@string/login2"
         android:textAllCaps="false"
         android:textAlignment="center"
         android:textColor="@color/btnTextColor"
@@ -99,4 +104,4 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
